# terminal

./: CMakeLists.txt
debian/: control
qmltermwidget/: CMakeLists.txt
qmltermwidget/lib/: ColorScheme.cpp  ColorScheme.h  Emulation.cpp  Emulation.h  Filter.cpp  Filter.h  HistorySearch.cpp  HistorySearch.h  KeyboardTranslator.cpp  KeyboardTranslator.h  Pty.cpp  Pty.h  Screen.cpp  ScreenWindow.cpp  Session.cpp  Session.h  TerminalDisplay.cpp  TerminalDisplay.h  Vt102Emulation.cpp  kprocess.cpp  kprocess.h  kpty.cpp  kptydevice.cpp  kptydevice.h  kptyprocess.cpp  kptyprocess.h  qtermwidget.cpp  qtermwidget.h
qmltermwidget/src/: QMLTermScrollbar.qml  ksession.cpp  ksession.h
src/: main.cpp
src/qml/: ExitPromptDialog.qml  GlobalSettings.qml  ImageButton.qml  SettingsDialog.qml  Terminal.qml  main.qml
